Fix overflow-x in code blocks

--- a/styles/markdown.scss
+++ b/styles/markdown.scss
@@ -81,6 +81,7 @@
   @apply text-lg;
   @apply markdown-p-spacing;
   @apply font-mono;
+  @apply overflow-x-scroll;
 }
 .markdown code {
   @apply px-1;
